move Eichmann page

--- a/a/absurd-claims/index.html
+++ b/a/absurd-claims/index.html
@@ -63,7 +63,7 @@
 				<li>gassing Soviet POWs in an open quarry (<a href="/manipulation/propaganda/index.html#Soviet">Soviet propaganda, as above</a>);</li>
 				<li>gas chambers on wheels in <a href="/instruments/camp/pure-extermination-camp/treblinka/index.html">Treblinka</a>, which dumped their victims directly into burning pits (see the entry on <a href="/instruments/camp/pure-extermination-camp/treblinka/index.html">Treblinka</a>);</li>
 				<li>delayed-action poison gas that allowed the victims to leave the gas chambers and walk to the mass graves by themselves, before dying (also claimed for <a href="/instruments/camp/pure-extermination-camp/treblinka/index.html">Treblinka)</a>;</li>
-				<li>rapid-assembly portable gas chamber sheds (claimed by A. <a href="/witnesses/witnesses/perpetrator/eichmann-adolf/index.html">Eichmann</a>);</li>
+				<li>rapid-assembly portable gas chamber sheds (claimed by A. <a href="/e/eichmann-adolf/index.html">Eichmann</a>);</li>
 				<li>beating people to death, then conducting autopsies to see why they died (<a href="/bibliography/index.html#IMT"><i>IMT</i></a>, Vol. 5, p. 199);</li>
 				<li>introduction of Zyklon gas into the gas chambers through showerheads (see the entry on <a href="/showers/index.html">showers</a>) or from steel bottles (<a href="/witnesses/perpetrator/gerstein-kurt/index.html">K. Gerstein</a>);</li>
 				<li>introduction of Zyklon gas into the gas chambers of Auschwitz via bombs (<a href="/witnesses/victim/bialek-regina/index.html">R. Bialek</a>, <a href="/witnesses/victim/nahon-marco/index.html">M. Nahon</a>, <a href="/witnesses/victim/ochshorn-isaac-egon/index.html">I. Ochshorn</a>, <a href="/witnesses/victim/tabeau-jerzy/index.html">J. Tabeau</a>);</li>
