--- a/absurdities/geysers-of-blood-from-mass-graves/index.html
+++ b/absurdities/geysers-of-blood-from-mass-graves/index.html
@@ -26,7 +26,7 @@
 				Some witnesses have claimed that <a href="/locations/other-crime-scene/mass-graves/index.html">mass graves</a> filled with murdered Jews emitted geysers of blood. It ought to be unnecessary to provide scientific proof for this to be physically impossible. Among those who claimed this are:
 			</p>
 			<ul>
-				<li><a href="/witnesses/witnesses/perpetrator/eichmann-adolf/index.html">Adolf Eichmann</a></li>
+				<li><a href="/e/eichmann-adolf/index.html">Adolf Eichmann</a></li>
 				<li><a href="/witnesses/victim/marcus-kurt/index.html">Kurt Marcus</a></li>
 				<li><a href="/witnesses/victim/wiesel-elie/index.html">Elie Wiesel</a></li>
 				<li><a href="/witnesses/victim/reder-rudolf/index.html">Rudolf Reder</a></li>
