--- a/e/index.html
+++ b/e/index.html
@@ -24,7 +24,7 @@
 					<li><a href="/persons/politician/eberl-irmfried/index.html">Eberl, Irmfried</a></li>
 					<li><a href="/witnesses/victim/edelman-salman/index.html">Edelman, Salman</a></li>
 					<li><a href="/persons/ehrenburg-ilya/index.html">Ehrenburg, Ilya</a></li>
-					<li><a href="/witnesses/witnesses/perpetrator/eichmann-adolf/index.html">Eichmann, Adolf</a></li>
+					<li><a href="/e/eichmann-adolf/index.html">Eichmann, Adolf</a></li>
 					<li><a href="/instruments/tool/einsatzgruppen/index.html">Einsatzgruppen</a></li>
 					<li><a href="/witnesses/victim/eisenschmidt-eliezer/index.html">Eisenschmidt, Eliezer</a></li>
 					<li><a href="/persons/legal-professional/eitan-dov/index.html">Eitan, Dov</a></li>
