--- a/locations/country/hungary/index.html
+++ b/locations/country/hungary/index.html
@@ -63,7 +63,7 @@
 				<li>Several other officials of the German foreign office whose names, signatures or initials can be found on documents pertaining to the deportation of Jews from Hungary &mdash; Geiger, Wissberg, Hencke, Reichel, Mirbach &mdash; were never indicted or prosecuted for their involvement either.</li>
 			</ul>
 			<p>
-				The two big exceptions are <a href="/witnesses/witnesses/perpetrator/eichmann-adolf/index.html">Adolf Eichmann</a> and one of his deputies, <a href="/witnesses/perpetrator/wisliceny-dieter/index.html">Dieter Wisliceny</a>. Eichmann was missing after the war and served as a scapegoat for everyone else during the various Nuremberg trials, while Wisliceny&rsquo;s deal with the Allies &mdash; to be let off the hook for testifying as requested &mdash; evidently went sour. He was eventually extradited to Czechoslovakia, where he was tried and hanged in 1948.
+				The two big exceptions are <a href="/e/eichmann-adolf/index.html">Adolf Eichmann</a> and one of his deputies, <a href="/witnesses/perpetrator/wisliceny-dieter/index.html">Dieter Wisliceny</a>. Eichmann was missing after the war and served as a scapegoat for everyone else during the various Nuremberg trials, while Wisliceny&rsquo;s deal with the Allies &mdash; to be let off the hook for testifying as requested &mdash; evidently went sour. He was eventually extradited to Czechoslovakia, where he was tried and hanged in 1948.
 			</p>
 			<h4>
 				<a id="Current"></a>Current Orthodox Narrative
