--- a/persons/heydrich-reinhardt/index.html
+++ b/persons/heydrich-reinhardt/index.html
@@ -39,7 +39,7 @@
 			</p>
 			<ul>
 				<li>On 24 January 1939, Heydrich was appointed by <a href="/goring-hermann/index.html">Göring</a> as head of the Reich Center for Jewish Emigration in Berlin (<i>Reichszentrale für jüdische Auswanderung</i>).</li>
-				<li>On 15 July 1939, Heydrich ordered <a href="/witnesses/witnesses/perpetrator/eichmann-adolf/index.html">Eichmann</a> to set up a Central Office for Jewish Emigration in Prague (<i>Zentralstelle für jüdische Auswanderung</i>).</li>
+				<li>On 15 July 1939, Heydrich ordered <a href="/e/eichmann-adolf/index.html">Eichmann</a> to set up a Central Office for Jewish Emigration in Prague (<i>Zentralstelle für jüdische Auswanderung</i>).</li>
 				<li>On 24 June 1940, Heydrich wrote to Joachim von Ribbentrop, German Minister of Foreign Affairs, saying that the Jewish problem could no longer be solved <q>by emigration</q> but required <q>a territorial final solution;</q></li>
 				<li>On 20 May 1941, Heydrich prohibited the <a href="/emigration/index.html">emigration</a> of Jews from France and Belgium in an effort to render the emigration of <q>Jews from the Reich territory</q> easier.</li>
 				<li>On 31 July 1941, Heydrich was entrusted by <a href="/goring-hermann/index.html">Hermann Göring</a> with the task of making preparations <q>for a <a href="/concepts/final-solution/index.html">comprehensive solution</a> of the Jewish question within the German sphere of influence in Europe</q> in <q>addition</q> to the tasks Göring had given him on 14 January 1939, meaning to resolve <q>the Jewish question by means of <a href="/emigration/index.html">emigration</a> or evacuation.</q></li>
