move Hoess page

--- a/a/auschwitz-trials/index.html
+++ b/a/auschwitz-trials/index.html
@@ -32,7 +32,7 @@
 				Poland conducted two trials, whose results set the propagandistic framework for all subsequent trials against defendants accused of having committed crimes there. East and West Germany both had several trials focusing on Auschwitz crimes, although only two of them had a major impact: The West-German first Frankfurt Auschwitz Trial, and the East-German trial against <a href="/witnesses/perpetrator/fischer-horst/index.html">Horst Fischer</a>. Two trials centering on Auschwitz crimes were conducted in Austria, with only the first of them against <a href="/witnesses/perpetrator/dejaco-walter/index.html">Walter Dejaco</a> and Fritz Ertl having considerable impact.
 			</p>
 			<h4>
-				<a id="Trial_of_Rudolf"></a>Trial of <a href="/witnesses/perpetrator/hoss-rudolf/index.html">Rudolf Höss</a>
+				<a id="Trial_of_Rudolf"></a>Trial of <a href="/h/hoss-rudolf/index.html">Rudolf Höss</a>
 			</h4>
 			<p>
 				The first trial with a focus on events allegedly occurring at the former Auschwitz Camp was conducted in Warsaw, Poland&rsquo;s capital. The only defendant during that trial was Rudolf Höss, who was commandant of the Auschwitz Camp from the beginning until November 1943. This 17-session trial lasted from 11 March until 29 March 1947. The case for the prosecution was prepared by investigative judge Jan Sehn. He conducted his manipulative investigations with the clear aim of confirming the fraudulent propaganda version which the Soviets had created right after conquering the area, including the 4-million death-toll claim.
@@ -41,7 +41,7 @@
 				The trial itself was a typical communist show trial, where Höss&rsquo;s defense lawyer acted like an assistant prosecutor. Höss was sentenced to death and executed on 16 April 1947 by hanging at a gallows built for him near the former crematorium building of the Auschwitz Main Camp.
 			</p>
 			<p>
-				(For more information, see the entries on <a href="/persons/legal-professional/sehn-jan/index.html">Jan Sehn</a>, <a href="/concepts/criminal-traces/index.html">criminal traces</a>, <a href="/witnesses/expert/dawidowski-roman/index.html">Roman Dawidowski</a>, <a href="/witnesses/perpetrator/hoss-rudolf/index.html">Rudolf Höss</a>, and the section on Auschwitz of the entry on <a href="/witnesses/witnesses/index.html#Auschwitz">witnesses</a>, many of whom either testified during the trial or at least made a deposition in front of Dr. Sehn.)
+				(For more information, see the entries on <a href="/persons/legal-professional/sehn-jan/index.html">Jan Sehn</a>, <a href="/concepts/criminal-traces/index.html">criminal traces</a>, <a href="/witnesses/expert/dawidowski-roman/index.html">Roman Dawidowski</a>, <a href="/h/hoss-rudolf/index.html">Rudolf Höss</a>, and the section on Auschwitz of the entry on <a href="/witnesses/witnesses/index.html#Auschwitz">witnesses</a>, many of whom either testified during the trial or at least made a deposition in front of Dr. Sehn.)
 			</p>
 			<h4>
 				<a id="Trial_of_Members"></a>Trial of Members of the Camp Garrison
@@ -62,7 +62,7 @@
 				As with the Höss Trial, Jan Sehn&rsquo;s manipulative pre-trial investigations also were the guidelines along which the trial was conducted. The hearings lasted from 24 November to 22 December 1947, ending with 23 death sentences, two of which were commuted to life imprisonments, both of which were released early. Furthermore, six life terms, seven 15-year prison terms, one 5-year and one 3-year prison term were imposed. Hans Münch was the only defendant who walked away as a free man.
 			</p>
 			<p>
-				(For more information, see the entries for the above-mentioned defendants as well as the entries on <a href="/persons/legal-professional/sehn-jan/index.html">Jan Sehn</a>, <a href="/concepts/criminal-traces/index.html">criminal traces</a>, <a href="/witnesses/expert/dawidowski-roman/index.html">Roman Dawidowski</a>, <a href="/witnesses/perpetrator/hoss-rudolf/index.html">Rudolf Höss</a>, and the section on Auschwitz of the entry on <a href="/witnesses/witnesses/index.html#Auschwitz">witnesses</a>, many of whom either testified during the trial or at least made a deposition in front of Dr. Sehn.)
+				(For more information, see the entries for the above-mentioned defendants as well as the entries on <a href="/persons/legal-professional/sehn-jan/index.html">Jan Sehn</a>, <a href="/concepts/criminal-traces/index.html">criminal traces</a>, <a href="/witnesses/expert/dawidowski-roman/index.html">Roman Dawidowski</a>, <a href="/h/hoss-rudolf/index.html">Rudolf Höss</a>, and the section on Auschwitz of the entry on <a href="/witnesses/witnesses/index.html#Auschwitz">witnesses</a>, many of whom either testified during the trial or at least made a deposition in front of Dr. Sehn.)
 			</p>
 			<h4>
 				<a id="Great"></a>Great Frankfurt Auschwitz Trial
