--- a/absurdities/fat-extracted-from-burning-corpses/index.html
+++ b/absurdities/fat-extracted-from-burning-corpses/index.html
@@ -35,7 +35,7 @@
 				<li><a href="/witnesses/victim/eisenschmidt-eliezer/index.html">Eliezer Eisenschmidt</a></li>
 				<li>four distinguished university professors: <a href="/witnesses/victim/epstein-berthold/index.html">Berthold Epstein</a>, Prague; <a href="/witnesses/victim/fischer-bruno/index.html">Bruno Fischer</a>, Prague; <a href="/witnesses/victim/limousin-henri/index.html">Henri Limousin</a>, Clermont-Ferrand; and <a href="/witnesses/victim/mansfeld-geza/index.html">Géza Mansfeld</a>, Budapest</li>
 				<li><a href="/witnesses/victim/faitelson-alex/index.html">Alex Faitelson</a></li>
-				<li><a href="/witnesses/perpetrator/hoss-rudolf/index.html">Rudolf Höss</a></li>
+				<li><a href="/h/hoss-rudolf/index.html">Rudolf Höss</a></li>
 				<li><a href="/witnesses/victim/jankowski-stanislaw/index.html">Stanisław Jankowski</a></li>
 				<li><a href="/witnesses/victim/mandelbaum-henryk/index.html">Henryk Mandelbaum</a></li>
 				<li><a href="/witnesses/victim/marcus-kurt/index.html">Kurt Marcus</a></li>
