--- a/list-of-entries/index.html
+++ b/list-of-entries/index.html
@@ -302,7 +302,7 @@
 					<li><a href="/witnesses/false-witness/holstein-bernard/index.html">Holstein, Bernard</a></li>
 					<li><a href="/instruments/tool/homicidal-gas-chamber/index.html">homicidal gas chambers</a></li>
 					<li><a href="/h/homosexuals/index.html">homosexuals</a></li>
-					<li><a href="/witnesses/perpetrator/hoss-rudolf/index.html">Höss, Rudolf</a></li>
+					<li><a href="/h/hoss-rudolf/index.html">Höss, Rudolf</a></li>
 					<li><a href="/persons/hossler-franz/index.html">Hössler, Franz</a></li>
 					<li><a href="/witnesses/perpetrator/hottl-wilhelm/index.html">Höttl, Wilhelm</a></li>
 					<li><a href="/locations/country/hungary/index.html">Hungary</a></li>
