--- a/manipulation/cremation-propaganda/index.html
+++ b/manipulation/cremation-propaganda/index.html
@@ -251,7 +251,7 @@
 												</td>
 					</tr>
 					<tr>
-						<td><a href="/witnesses/perpetrator/hoss-rudolf/index.html">Rudolf Höss</a> (SS)</td>
+						<td><a href="/h/hoss-rudolf/index.html">Rudolf Höss</a> (SS)</td>
 						<td>
 
 							&mdash;
