--- a/persons/politician/rosenberg-alfred/index.html
+++ b/persons/politician/rosenberg-alfred/index.html
@@ -105,7 +105,7 @@
 			</p>
 			<blockquote>
 				<p>
-					[&hellip;W]hat has been testified to here the other day [by <a href="/witnesses/perpetrator/hoss-rudolf/index.html">Rudolf Höss</a> about Auschwitz on 15 April, one day earlier], I considered simply impossible and I would not have believed it even if Heinrich Himmler himself had related it to me. There are things which, even to me, appear beyond the humanly possible.
+					[&hellip;W]hat has been testified to here the other day [by <a href="/h/hoss-rudolf/index.html">Rudolf Höss</a> about Auschwitz on 15 April, one day earlier], I considered simply impossible and I would not have believed it even if Heinrich Himmler himself had related it to me. There are things which, even to me, appear beyond the humanly possible.
 				</p>
 			</blockquote>
 			<p>
