--- a/plans-orders/intentionality/index.html
+++ b/plans-orders/intentionality/index.html
@@ -57,7 +57,7 @@
 				Other entries on mid-level functionaries also cover some aspects of this overarching topic, such as:
 			</p>
 			<ul>
-				<li><a href="/witnesses/perpetrator/hoss-rudolf/index.html">Rudolf Höss</a></li>
+				<li><a href="/h/hoss-rudolf/index.html">Rudolf Höss</a></li>
 				<li><a href="/witnesses/perpetrator/ohlendorf-otto/index.html">Otto Ohlendorf</a></li>
 				<li><a href="/witnesses/perpetrator/becher-kurt/index.html">Kurt Becher</a></li>
 				<li><a href="/wartime-leader/heydrich-reinhardt/index.html">Reinhardt Heydrich</a></li>
