--- a/witnesses/perpetrator/hottl-wilhelm/index.html
+++ b/witnesses/perpetrator/hottl-wilhelm/index.html
@@ -42,7 +42,7 @@
 			</p>
 			<blockquote>
 				<p>
-					I do not know where Eichmann got this figure, [&hellip;] which today belongs to the iron stock of historiography and which to doubt is forbidden by law. One can only assume: Eichmann also listened, as he confessed to me, to &lsquo;enemy radio stations,&rsquo; in whose broadcasts this number certainly also appeared, and repeated it as his &lsquo;official&rsquo; knowledge. The notorious chief of the Auschwitz Concentration Camp <a href="/hoss-rudolf/index.html">Höss</a> also operated with numbers in the millions which were incorrect. Were these statements all just &lsquo;hunter&rsquo;s lore&rsquo;?
+					I do not know where Eichmann got this figure, [&hellip;] which today belongs to the iron stock of historiography and which to doubt is forbidden by law. One can only assume: Eichmann also listened, as he confessed to me, to &lsquo;enemy radio stations,&rsquo; in whose broadcasts this number certainly also appeared, and repeated it as his &lsquo;official&rsquo; knowledge. The notorious chief of the Auschwitz Concentration Camp <a href="/h/hoss-rudolf/index.html">Höss</a> also operated with numbers in the millions which were incorrect. Were these statements all just &lsquo;hunter&rsquo;s lore&rsquo;?
 				</p>
 			</blockquote>
 			<p>
