--- a/witnesses/witnesses/index.html
+++ b/witnesses/witnesses/index.html
@@ -115,7 +115,7 @@
 				<li><a href="/witnesses/victim/gruner-miklos/index.html">Grüner, Miklós</a></li>
 				<li><a href="/witnesses/victim/gulba-franciszek/index.html">Gulba, Franciszek</a></li>
 				<li><a href="/witnesses/victim/herman-chaim/index.html">Herman, Chaim</a></li>
-				<li><a href="/perpetrator/hoss-rudolf/index.html">Höss, Rudolf</a> (SS)</li>
+				<li><a href="/h/hoss-rudolf/index.html">Höss, Rudolf</a> (SS)</li>
 				<li><a href="/witnesses/victim/jankowski-stanislaw/index.html">Jankowski, Stanisław</a></li>
 				<li><a href="/perpetrator/kaduk-oswald/index.html">Kaduk, Oswald</a> (SS)</li>
 				<li><a href="/witnesses/victim/karolinskij-samij/index.html">Karolinskij, Samij</a></li>
@@ -288,7 +288,7 @@
 			</h4>
 			<ul>
 				<li><a href="/perpetrator/becher-kurt/index.html">Becher, Kurt</a> (SS)</li>
-				<li><a href="/witnesses/perpetrator/eichmann-adolf/index.html">Eichmann, Adolf</a> (SS)</li>
+				<li><a href="/e/eichmann-adolf/index.html">Eichmann, Adolf</a> (SS)</li>
 				<li><a href="/persons/frank-hans/index.html">Frank, Hans</a> (SS)</li>
 				<li><a href="/persons/goring-hermann/index.html">Göring, Hermann</a> (SS)</li>
 				<li><a href="/documents/hofle-hans/index.html">Höfle, Hans</a> (SS)</li>
