--- a/w/index.html
+++ b/w/index.html
@@ -55,6 +55,7 @@
 					<li><a href="/categories/witnesses/perpetrator/wolff-karl/index.html">Wolff, Karl</a></li>
 					<li><a href="/witnesses/perpetrator/wolff-karl/index.html">Wolff, Karl</a></li>
 					<li><a href="/witnesses/victim/wolken-otto/index.html">Wolken, Otto</a></li>
+					<li><a href="/w/wolzek/index.html">Wolzek</a></li>
 				</ul>
 			</div>
 <!-- #bbinclude "footer.incl" -->
