move documents contents

--- a/b/belzec/index.html
+++ b/b/belzec/index.html
@@ -29,7 +29,7 @@
 				The Belzec Camp near the town of the same name was located in the southeast of Poland, close to the border to Ukraine, some 45 miles northwest of the Ukrainian city of Lviv. The camp was initially one of a string of forced-labor camps set up along the eastern border of occupied Poland, meant to house prisoners, among them gypsies, Jews and Christian Poles, who were deployed to build roads and border fortifications. Living conditions in these camps were very bad, and mortality due to exhaustion, mistreatment and diseases was very high.
 			</p>
 			<p>
-				On 16 March 1942, Fritz Reuter, an employee of the Department of Population and Welfare in the office of the governor for the Lublin District, and SS <i>Hauptsturmführer</i> <a href="/documents/hofle-hans/index.html">Hans Höfle</a>, <a href="/witnesses/perpetrator/globocnik-odilo/index.html">Odilo Globocnik</a>&rsquo;s deputy chief of staff and delegate for Jewish resettlement in the Lublin district, decided that Jews slated to be sent to this district ought to be divided in those fit and those unfit for labor before being put on trains. The former were to be collected in a camp for forced-labor, while the latter were to be sent through the outermost border station at Belzec <q>to cross the border [to the East] and never return to the Government General [occupied Poland].</q>
+				On 16 March 1942, Fritz Reuter, an employee of the Department of Population and Welfare in the office of the governor for the Lublin District, and SS <i>Hauptsturmführer</i> <a href="/h/hofle-hans/index.html">Hans Höfle</a>, <a href="/witnesses/perpetrator/globocnik-odilo/index.html">Odilo Globocnik</a>&rsquo;s deputy chief of staff and delegate for Jewish resettlement in the Lublin district, decided that Jews slated to be sent to this district ought to be divided in those fit and those unfit for labor before being put on trains. The former were to be collected in a camp for forced-labor, while the latter were to be sent through the outermost border station at Belzec <q>to cross the border [to the East] and never return to the Government General [occupied Poland].</q>
 			</p>
 			<p>
 				Very few official documents on deportations to the Bełżec Camp have survived. While they show a very harsh German attitude toward the Jews &mdash; <q>old, infected, frail, or untransportable Jews</q> were evidently on occasions shot &mdash; they do not confirm any extermination policy; for if every Jew was to be gassed at Belzec, why take the trouble of separating those fit and unfit for labor, and of killing the unfit Jews beforehand?
@@ -148,7 +148,7 @@
 				<li>In 2000, historian Michael Tregenza claimed a death toll of up to one million.</li>
 			</ul>
 			<p>
-				According to a telegram by <a href="/documents/hofle-hans/index.html">Hans Höfle</a> intercepted by the British and discovered in 2001, the total number of Jews <i>deported</i> to Belzec amounted to 434,508, with an unknown fate. (For more details, see <a href="/bibliography/index.html#Mattogno2004a">Mattogno 2004a</a>, pp. 47-50)
+				According to a telegram by <a href="/h/hofle-hans/index.html">Hans Höfle</a> intercepted by the British and discovered in 2001, the total number of Jews <i>deported</i> to Belzec amounted to 434,508, with an unknown fate. (For more details, see <a href="/bibliography/index.html#Mattogno2004a">Mattogno 2004a</a>, pp. 47-50)
 			</p>
 			<h4>
 				<a id="Forensic"></a>Forensic Findings
