--- a/c/index.html
+++ b/c/index.html
@@ -34,13 +34,13 @@
 					<li><a href="/c/cliches-about-the-holocaust/index.html">Clichés about the Holocaust</a></li>
 					<li><a href="/concepts/code-language/index.html">Code Language</a></li>
 					<li><a href="/witnesses/victim/cohen-leon/index.html">Cohen, Leon</a></li>
-					<li><a href="/documents/commissars-order/index.html">Commissars Order</a></li>
+					<li><a href="/c/commissars-order/index.html">Commissars Order</a></li>
 					<li><a href="/concept/compensation/index.html">Compensation</a></li>
 					<li><a href="/concepts/compensation/index.html">Compensation</a></li>
 					<li><a href="/instruments/camp/concentration-camps/index.html">Concentration Camps</a></li>
 					<li><a href="/concepts/construction-office/index.html">Construction Office</a></li>
 					<li><a href="/concepts/convergence-of-evidence/index.html">Convergence of Evidence</a></li>
-					<li><a href="/documents/corpse-photos/index.html">Corpse Photos</a></li>
+					<li><a href="/c/corpse-photos/index.html">Corpse Photos</a></li>
 					<li><a href="/witnesses/false-witness/corry-joe/index.html">Corry, Joe</a></li>
 					<li><a href="/manipulation/cremation-propaganda/index.html">Cremation Propaganda</a></li>
 					<li><a href="/instruments/tool/crematoria/index.html">Crematoria</a></li>
