--- a/j/index.html
+++ b/j/index.html
@@ -20,7 +20,7 @@
 				J
 			</h2>
 			<ul>
-				<li><a href="/documents/jager-report/index.html">Jäger Report</a></li>
+				<li><a href="/j/jager-report/index.html">Jäger Report</a></li>
 				<li><a href="/witnesses/perpetrator/jager-karl/index.html">Jäger, Karl</a></li>
 				<li><a href="/witnesses/victim/jankowski-stanislaw/index.html">Jankowski, Stanisław</a></li>
 				<li><a href="/instruments/camp/other-camp/janowska-camp/index.html">Janowska Camp</a></li>
