--- a/list-of-entries/index.html
+++ b/list-of-entries/index.html
@@ -88,7 +88,7 @@
 					<li><a href="/witnesses/expert/bouard-michel-de/index.html">Boüard, Michel de</a></li>
 					<li><a href="/witnesses/victim/brener-hejnoch/index.html">Brener, Hejnoch</a></li>
 					<li><a href="/locations/other-crime-scene/brest/index.html">Brest</a></li>
-					<li><a href="/documents/british-radio-intercepts/index.html">British Radio Intercepts</a></li>
+					<li><a href="/b/british-radio-intercepts/index.html">British Radio Intercepts</a></li>
 					<li><a href="/witnesses/perpetrator/broad-pery-s/index.html">Broad, Pery S.</a></li>
 					<li><a href="/witnesses/victim/brodsky-isaak/index.html">Brodsky, Isaak</a></li>
 					<li><a href="/locations/other-crime-scene/bronnaya-gora/index.html">Bronnaya Gora</a></li>
@@ -116,12 +116,12 @@
 					<li><a href="/witnesses/victim/chybinski-stanislaw/index.html">Chybiński, Stanisław</a></li>
 					<li><a href="/concepts/code-language/index.html">code language</a></li>
 					<li><a href="/witnesses/victim/cohen-leon/index.html">Cohen, Leon</a></li>
-					<li><a href="/documents/commissars-order/index.html">Commissars Order</a></li>
+					<li><a href="/c/commissars-order/index.html">Commissars Order</a></li>
 					<li><a href="/concepts/compensation/index.html">compensation</a></li>
 					<li><a href="/instruments/camp/concentration-camps/index.html">concentration camps</a></li>
 					<li><a href="/concepts/construction-office/index.html">construction office</a></li>
 					<li><a href="/concepts/convergence-of-evidence/index.html">convergence of evidence</a></li>
-					<li><a href="/documents/corpse-photos/index.html">corpse photos</a></li>
+					<li><a href="/c/corpse-photos/index.html">corpse photos</a></li>
 					<li><a href="/witnesses/false-witness/corry-joe/index.html">Corry, Joe</a></li>
 					<li><a href="/manipulation/cremation-propaganda/index.html">cremation propaganda</a></li>
 					<li><a href="/instruments/tool/crematoria/index.html">crematoria</a></li>
@@ -291,10 +291,10 @@
 					<li><a href="/persons/himmler-heinrich/index.html">Himmler, Heinrich</a></li>
 					<li><a href="/witnesses/victim/hirszman-chaim/index.html">Hirszman, Chaim</a></li>
 					<li><a href="/witnesses/false-witness/hirt-joseph/index.html">Hirt, Joseph</a></li>
-					<li><a href="/documents/hitler-order-final-solution/index.html">Hitler Order, Final Solution</a></li>
+					<li><a href="/h/hitler-order-final-solution/index.html">Hitler Order, Final Solution</a></li>
 					<li><a href="/persons/hitler-adolf/index.html">Hitler, Adolf</a></li>
 					<li><a href="/witnesses/perpetrator/hofer-fritz/index.html">Höfer, Fritz</a></li>
-					<li><a href="/documents/hofle-hans/index.html">Höfle, Hans</a></li>
+					<li><a href="/h/hofle-hans/index.html">Höfle, Hans</a></li>
 					<li><a href="/witnesses/perpetrator/hofmann-ernst/index.html">Hofmann, Ernst</a></li>
 					<li><a href="/concepts/holocaust-indoctrination/index.html">Holocaust indoctrination</a></li>
 					<li><a href="/concepts/holocaust-skepticism-revisionism/index.html">Holocaust Skeptics</a></li>
@@ -326,7 +326,7 @@
 					J
 				</h3>
 				<ul>
-					<li><a href="/documents/jager-report/index.html">Jäger Report</a></li>
+					<li><a href="/j/jager-report/index.html">Jäger Report</a></li>
 					<li><a href="/witnesses/perpetrator/jager-karl/index.html">Jäger, Karl</a></li>
 					<li><a href="/witnesses/victim/jankowski-stanislaw/index.html">Jankowski, Stanisław</a></li>
 					<li><a href="/instruments/camp/other-camp/janowska-camp/index.html">Janowska Camp</a></li>
@@ -502,7 +502,7 @@
 					<li><a href="/witnesses/perpetrator/pohl-oswald/index.html">Pohl, Oswald</a></li>
 					<li><a href="/locations/country/poland/index.html">Poland</a></li>
 					<li><a href="/persons/propagandist/polevoy-boris/index.html">Polevoy, Boris</a></li>
-					<li><a href="/documents/polish-underground-reports/index.html">Polish Underground Reports</a></li>
+					<li><a href="/p/polish-underground-reports/index.html">Polish Underground Reports</a></li>
 					<li><a href="/instruments/einsatzgruppen/ponary/index.html">Ponary</a></li>
 					<li><a href="/witnesses/victim/poswolski-henryk/index.html">Poswolski, Henryk</a></li>
 					<li><a href="/witnesses/perpetrator/pradel-friedrich/index.html">Pradel, Friedrich</a></li>
@@ -561,7 +561,7 @@
 					<li><a href="/legal/company/saurer-company/index.html">Saurer Company</a></li>
 					<li><a href="/witnesses/victim/schellekes-maurice/index.html">Schellekes, Maurice</a></li>
 					<li><a href="/witnesses/expert/schelvis-jules/index.html">Schelvis, Jules</a></li>
-					<li><a href="/documents/schindlers-list-movie/index.html">Schindler&rsquo;s List, movie</a></li>
+					<li><a href="/s/schindlers-list-movie/index.html">Schindler&rsquo;s List, movie</a></li>
 					<li><a href="/witnesses/victim/schwarz-deszo/index.html">Schwarz, Deszö</a></li>
 					<li><a href="/witnesses/victim/schwarzbart-ignacy/index.html">Schwarzbart, Ignacy</a></li>
 					<li><a href="/persons/politician/schwela-siegfried/index.html">Schwela, Siegfried</a></li>
@@ -592,7 +592,7 @@
 					<li><a href="/persons/politician/speer-albert/index.html">Speer, Albert</a></li>
 					<li><a href="/witnesses/victim/springer-elisa/index.html">Springer, Elisa</a></li>
 					<li><a href="/witnesses/victim/srebrnik-szymon/index.html">Srebrnik, Szymon</a></li>
-					<li><a href="/documents/stahlecker-reports/index.html">Stahlecker Reports</a></li>
+					<li><a href="/s/stahlecker-reports/index.html">Stahlecker Reports</a></li>
 					<li><a href="/persons/politician/stahlecker-walter/index.html">Stahlecker, Walter</a></li>
 					<li><a href="/s/standing-upright-dead-gassing-victims/index.html">standing upright, dead gassing victims</a></li>
 					<li><a href="/witnesses/victim/stanek-franciszek/index.html">Stanek, Franciszek</a></li>
@@ -612,7 +612,7 @@
 					<li><a href="/objects/swimming-pool/index.html">swimming pool</a></li>
 					<li><a href="/witnesses/victim/szajn-lewin-eugenia/index.html">Szajn-Lewin, Eugenia</a></li>
 					<li><a href="/persons/propagandist/szende-stefan/index.html">Szende, Stefan</a></li>
-					<li><a href="/documents/szlamek-report/index.html">Szlamek Report</a></li>
+					<li><a href="/s/szlamek-report/index.html">Szlamek Report</a></li>
 					<li><a href="/witnesses/victim/szmajzner-stanislaw/index.html">Szmajzner, Stanisław</a></li>
 					<li><a href="/witnesses/victim/szperling-henike/index.html">Szperling, Henike</a></li>
 				</ul>
@@ -666,8 +666,8 @@
 					<li><a href="/witnesses/false-witness/wael-monique-de/index.html">Wael, Monique de</a></li>
 					<li><a href="/witnesses/perpetrator/walter-bernhard/index.html">Walter, Bernhard</a></li>
 					<li><a href="/events/wannsee-conference/index.html">Wannsee Conference</a></li>
-					<li><a href="/documents/wannsee-protocol/index.html">Wannsee Protocol</a></li>
-					<li><a href="/documents/war-refugee-board-report/index.html">War Refugee Board Report</a></li>
+					<li><a href="/w/wannsee-protocol/index.html">Wannsee Protocol</a></li>
+					<li><a href="/w/war-refugee-board-report/index.html">War Refugee Board Report</a></li>
 					<li><a href="/instruments/ghetto/warsaw-ghetto/index.html">Warsaw Ghetto</a></li>
 					<li><a href="/witnesses/victim/warszawski-szyja/index.html">Warszawski, Szyja</a></li>
 					<li><a href="/witnesses/false-witness/watt-donald/index.html">Watt, Donald</a></li>
