--- a/locations/camps/transit-camps/index.html
+++ b/locations/camps/transit-camps/index.html
@@ -32,7 +32,7 @@
 				Belzec, Chełmno, Sobibór, Treblinka
 			</h4>
 			<p>
-				The four camps at <a href="/b/belzec/index.html">Belzec</a>, <a href="/c/chelmno/index.html">Chełmno</a>, <a href="/sobibor/index.html">Sobibór</a> and <a href="/t/treblinka/index.html">Treblinka</a> are a special case. None of them were designed or equipped to accommodate large numbers of inmates for an extended period of time. However, it is well established that large numbers of inmates were sent to these camps. The best evidence for this is the so-called Höfle telegram, which list the number of inmates who arrived at Chełmno, Sobibór and Treblinka, and also at the <a href="/instruments/camp/majdanek/index.html">Majdanek</a> Camp by the end of 1942 (see the entry for <a href="/documents/hofle-hans/index.html">Hans Höfle</a>):
+				The four camps at <a href="/b/belzec/index.html">Belzec</a>, <a href="/c/chelmno/index.html">Chełmno</a>, <a href="/sobibor/index.html">Sobibór</a> and <a href="/t/treblinka/index.html">Treblinka</a> are a special case. None of them were designed or equipped to accommodate large numbers of inmates for an extended period of time. However, it is well established that large numbers of inmates were sent to these camps. The best evidence for this is the so-called Höfle telegram, which list the number of inmates who arrived at Chełmno, Sobibór and Treblinka, and also at the <a href="/instruments/camp/majdanek/index.html">Majdanek</a> Camp by the end of 1942 (see the entry for <a href="/h/hofle-hans/index.html">Hans Höfle</a>):
 			</p>
 			<table class="table">
 				<thead>
