--- a/s/index.html
+++ b/s/index.html
@@ -28,7 +28,7 @@
 					<li><a href="/legal/company/saurer-company/index.html">Saurer Company</a></li>
 					<li><a href="/witnesses/victim/schellekes-maurice/index.html">Schellekes, Maurice</a></li>
 					<li><a href="/witnesses/expert/schelvis-jules/index.html">Schelvis, Jules</a></li>
-					<li><a href="/documents/schindlers-list-movie/index.html">Schindler&rsquo;s List, movie</a></li>
+					<li><a href="/s/schindlers-list-movie/index.html">Schindler&rsquo;s List, movie</a></li>
 					<li><a href="/witnesses/victim/schwarz-deszo/index.html">Schwarz, Deszö</a></li>
 					<li><a href="/witnesses/victim/schwarzbart-ignacy/index.html">Schwarzbart, Ignacy</a></li>
 					<li><a href="/persons/politician/schwela-siegfried/index.html">Schwela, Siegfried</a></li>
@@ -59,7 +59,7 @@
 					<li><a href="/persons/politician/speer-albert/index.html">Speer, Albert</a></li>
 					<li><a href="/witnesses/victim/springer-elisa/index.html">Springer, Elisa</a></li>
 					<li><a href="/witnesses/victim/srebrnik-szymon/index.html">Srebrnik, Szymon</a></li>
-					<li><a href="/documents/stahlecker-reports/index.html">Stahlecker Reports</a></li>
+					<li><a href="/s/stahlecker-reports/index.html">Stahlecker Reports</a></li>
 					<li><a href="/persons/politician/stahlecker-walter/index.html">Stahlecker, Walter</a></li>
 					<li><a href="/s/standing-upright-dead-gassing-victims/index.html">Standing Upright, Dead Gassing Victims</a></li>
 					<li><a href="/witnesses/victim/stanek-franciszek/index.html">Stanek, Franciszek</a></li>
@@ -79,7 +79,7 @@
 					<li><a href="/objects/swimming-pool/index.html">Swimming Pool</a></li>
 					<li><a href="/witnesses/victim/szajn-lewin-eugenia/index.html">Szajn-Lewin, Eugenia</a></li>
 					<li><a href="/persons/propagandist/szende-stefan/index.html">Szende, Stefan</a></li>
-					<li><a href="/documents/szlamek-report/index.html">Szlamek Report</a></li>
+					<li><a href="/s/szlamek-report/index.html">Szlamek Report</a></li>
 					<li><a href="/witnesses/victim/szmajzner-stanislaw/index.html">Szmajzner, Stanisław</a></li>
 					<li><a href="/witnesses/victim/szperling-henike/index.html">Szperling, Henike</a></li>
 				</ul>
