--- a/t/treblinka/index.html
+++ b/t/treblinka/index.html
@@ -44,7 +44,7 @@
 				There are numerous documents regarding the organization of these <q><a href="/plans-orders/resettlement/index.html">resettlement</a></q> transports, as they were officially called. On 21 August 1942, one month into the evacuation of the Jews from the <a href="/ghetto/warsaw-ghetto/index.html">Warsaw Ghetto</a>, the responsible Higher-SS leader reported to Goebbels on the deportations. He told Goebbels that the Jews are now <q>established in the East.</q> (See the entry on <a href="/persons/politician/goebbels-joseph/index.html">Joseph Goebbels</a>.)
 			</p>
 			<p>
-				Finally, there is a telegram sent by <a href="/documents/hofle-hans/index.html">Hans Höfle</a> to the SS headquarters in Berlin on 11 January 1943, which was intercepted and deciphered by the British (see the entry on <a href="/documents/hofle-hans/index.html">Hans Höfle</a>). It states that, by the end of 1942, 713,555 Jews had arrived at <q>T</q>, which probably stands for Treblinka. The message contains no indications regarding the fate of the deportees.
+				Finally, there is a telegram sent by <a href="/h/hofle-hans/index.html">Hans Höfle</a> to the SS headquarters in Berlin on 11 January 1943, which was intercepted and deciphered by the British (see the entry on <a href="/h/hofle-hans/index.html">Hans Höfle</a>). It states that, by the end of 1942, 713,555 Jews had arrived at <q>T</q>, which probably stands for Treblinka. The message contains no indications regarding the fate of the deportees.
 			</p>
 			<p>
 				There are also a few documents dealing with transports of Jews from the <a href="/ghetto/warsaw-ghetto/index.html">Warsaw Ghetto</a> which evidently went through Treblinka and ended up in the German-occupied eastern territories of the Soviet Union.
