--- a/witnesses/witnesses/index.html
+++ b/witnesses/witnesses/index.html
@@ -291,7 +291,7 @@
 				<li><a href="/e/eichmann-adolf/index.html">Eichmann, Adolf</a> (SS)</li>
 				<li><a href="/persons/frank-hans/index.html">Frank, Hans</a> (SS)</li>
 				<li><a href="/persons/goring-hermann/index.html">Göring, Hermann</a> (SS)</li>
-				<li><a href="/documents/hofle-hans/index.html">Höfle, Hans</a> (SS)</li>
+				<li><a href="/h/hofle-hans/index.html">Höfle, Hans</a> (SS)</li>
 				<li><a href="/perpetrator/hottl-wilhelm/index.html">Höttl, Wilhelm</a> (SS)</li>
 				<li><a href="/persons/politician/korherr-richard/index.html">Korherr, Richard</a> (SS)</li>
 				<li><a href="/expert/larson-charles/index.html">Larson, Charles</a></li>
