--- a/witnesses/perpetrator/jager-karl/index.html
+++ b/witnesses/perpetrator/jager-karl/index.html
@@ -29,7 +29,7 @@
 				</figcaption>
 			</figure>
 			<p>
-				Karl Jäger (20 Sept. 1888 &mdash; 22 June 1959) was an SS <i>Standartenführer</i> since 1940. He joined the SS in 1932, and the German Security Service (<i>Sicherheitsdienst</i>) in 1938. Prior to the invasion of the Soviet Union, he became commander of <i>Einsatzkommando</i> 3a of <a href="/instruments/tool/einsatzgruppen/index.html"><i>Einsatzgruppe</i></a> A. His unit operated mainly in Lithuania. Jäger is said to be the author of the so-called <a href="/documents/jager-report/index.html">Jäger Report</a>, which lists all the executions of Jews by his unit up to late November 1941, totalling some 130,000. However, several issues with this report make its authenticity questionable. (See the entry dedicated to the <a href="/documents/jager-report/index.html">Jäger Report</a>.)
+				Karl Jäger (20 Sept. 1888 &mdash; 22 June 1959) was an SS <i>Standartenführer</i> since 1940. He joined the SS in 1932, and the German Security Service (<i>Sicherheitsdienst</i>) in 1938. Prior to the invasion of the Soviet Union, he became commander of <i>Einsatzkommando</i> 3a of <a href="/instruments/tool/einsatzgruppen/index.html"><i>Einsatzgruppe</i></a> A. His unit operated mainly in Lithuania. Jäger is said to be the author of the so-called <a href="/j/jager-report/index.html">Jäger Report</a>, which lists all the executions of Jews by his unit up to late November 1941, totalling some 130,000. However, several issues with this report make its authenticity questionable. (See the entry dedicated to the <a href="/j/jager-report/index.html">Jäger Report</a>.)
 			</p>
 			<p>
 				At the end of the war, Jäger lived normally in Germany under his real name, while hiding the fact that he had been an SS member. As a result of West-German investigations into <a href="/instruments/tool/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a> murders, he was arrested on 10 April 1959. The minutes of his interrogations between the 16th and 19th of June fill 29 pages. He committed suicide in his prison cell on 22 June 1959.
@@ -44,7 +44,7 @@
 				Jäger insisted that he regularly sent event reports about his unit&rsquo;s activities to his superior, detailing all activities, including executions. He remembered that, upon his unit&rsquo;s arrival in Kaunas, Lithuanian militias had taken matters in their own hand by executing some 3,000 Jews. Jäger recalled executions at the Lithuanian towns of Raseiniai, Olita, Siauliai, Mariampol, Ukmerge, Vilnius, Aglona and Daugavpils (the latter two are in Latvia).
 			</p>
 			<p>
-				Jäger&rsquo;s postwar testimony contradicts some of the statements found in the <q><a href="/documents/jager-report/index.html">Jäger Report</a>.</q> Since that report was made available to the West-German judiciary by Soviet authorities only in 1963, Jäger could not be confronted with them.
+				Jäger&rsquo;s postwar testimony contradicts some of the statements found in the <q><a href="/j/jager-report/index.html">Jäger Report</a>.</q> Since that report was made available to the West-German judiciary by Soviet authorities only in 1963, Jäger could not be confronted with them.
 			</p>
 			<p>
 				(For more details, see <a href="/bibliography/index.html#Mattogno2022c">Mattogno 2022c</a>, pp. 199-202.)
